syntax = "proto3";

import "proto/execspec.proto";

// A request to execute a set of commands.
message ExecuteRequest {
    ExecutionSet executions = 1;
}

// The results from a successful execution.
message ExecuteResponse {
    ExecutionResult result = 1;
}

// The ExecutorService takes request to run given commands in a secure manner.
// By default, commands are not subject to any resource constraints and do not
// have any access to the local file system, but this can be changed by the
// caller.
service ExecutorService {

    // Execute a set of commands and return their exit results.
    rpc Execute(ExecuteRequest) returns (ExecuteResponse) {}

}
